--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -2,8 +2,9 @@
 .btn{
   color: var(--theme);
   text-align: center;
-  width: 100%;
-  margin: 0.5rem 0rem;
+  /* width: 100%; */
+  margin: 1rem 0rem;
+  font-size: 0.8rem;
   padding: 0.5rem !important;
   background-color: #fff;
   border: 1px solid var(--theme);
