--- a/src/components/Input/styles.css
+++ b/src/components/Input/styles.css
@@ -1,11 +1,11 @@
 .input-wrapper{
-  margin-bottom: 1rem;
-  padding: 0 1rem;
+  margin-bottom: 1.5rem;
+  /* padding: 0 1rem; */
 }
 .label-input{
   text-transform: capitalize;
  margin-bottom: 0.5rem; 
- font-size: 1rem;
+ font-size: 0.8rem;
 }
 
 .custom-input{
